--- a/AutoCAD_Windows/AutoCAD_Windows/Property/Editor/ECheckBox.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/Editor/ECheckBox.xaml
@@ -1,8 +1,8 @@
-﻿<ListViewItem x:Class="WindowDictionary.Property.ListViewItems.LVI_Button"
+﻿<ListViewItem x:Class="WindowDictionary.Property.Editor.ECheckBox"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
               xmlns:local="clr-namespace:WindowDictionary.Property"
               mc:Ignorable="d"
               MinHeight="20"
@@ -19,15 +19,17 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </ListViewItem.Resources>
+    <ListViewItem.Style>
+        <Style BasedOn="{StaticResource PropertyItems}"
+               TargetType="{x:Type ListViewItem}" />
+    </ListViewItem.Style>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="3*" />
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock x:Name="textblock"
-                   x:FieldModifier="private" />
-        <Button x:Name="button"
-                x:FieldModifier="private"
-                Grid.Column="1" />
+        <TextBlock Text="{Binding Path=PropertyItem.PropertyName}" />
+        <CheckBox IsChecked="{Binding Path=PropertyItem.Values[0]}"
+                  Grid.Column="1" />
     </Grid>
 </ListViewItem>
