--- a/AutoCAD_Windows/AutoCAD_Windows/Property/Editor/PropertyEditor.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/Editor/PropertyEditor.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="WindowDictionary.Property.PropertyEditor"
+﻿<Window x:Class="WindowDictionary.Property.Editor.PropertyEditor"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WindowDictionary.Property"
-        xmlns:converter="clr-namespace:WindowDictionary.Converters"
+        xmlns:local="clr-namespace:WindowDictionary.Property.Editor"
+        xmlns:property="clr-namespace:WindowDictionary.Property"
+        xmlns:r="clr-namespace:WindowDictionary.Resources"
         mc:Ignorable="d"
         BorderThickness="0"
         Height="450"
@@ -17,7 +18,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../StyleDictionary.xaml" />
+                <ResourceDictionary Source="../../StyleDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
@@ -32,7 +33,7 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.Resources>
-            <HierarchicalDataTemplate DataType="{x:Type local:PropertyGroup}"
+            <HierarchicalDataTemplate DataType="{x:Type property:PropertyGroup}"
                                       ItemsSource="{Binding Path=PropertyGroups}">
                 <TextBlock>
                     <TextBlock.Text>
@@ -45,66 +46,9 @@
                    Height="25"
                    Margin="0"
                    MouseDown="Menu_Grid_MouseDown" />
-        <UniformGrid Columns="3"
-                     Grid.Column="2"
-                     HorizontalAlignment="Right">
-            <UniformGrid.Resources>
-                <Style TargetType="Button">
-                    <Setter Property="Width"
-                            Value="25" />
-                    <Setter Property="Background"
-                            Value="Transparent" />
-                    <Setter Property="BorderThickness"
-                            Value="0" />
-                </Style>
-            </UniformGrid.Resources>
-            <Button x:Name="Window_Minimize_Button"
-                    Click="Window_Minimize_Click"
-                    ToolTip="Minimize"
-                    Width="25">
-                <Image x:Name="imageMinimizeApp"
-                       Height="10"
-                       Source="../Application/minimizeAppIcon.ico" />
-            </Button>
-            <Button x:Name="Window_Resize_Button"
-                    Click="Window_Resize_Click"
-                    Width="25">
-                <Image x:Name="imageResizeApp"
-                       Source="../Application/maximizeAppIcon.ico"
-                       Height="10" />
-            </Button>
-            <Button x:Name="Window_Exit_Button"
-                    Click="Cancel_Click"
-                    ToolTip="Close"
-                    Width="25">
-                <Button.Style>
-                    <Style TargetType="{x:Type Button}">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type Button}">
-                                    <Border x:Name="Border"
-                                            Background="{TemplateBinding Background}">
-                                        <Image x:Name="imageExitApp"
-                                               Source="../Application/exitAppIcon.ico"
-                                               Height="10" />
-                                    </Border>
-                                    <ControlTemplate.Triggers>
-                                        <Trigger Property="IsMouseOver"
-                                                 Value="True">
-                                            <Setter Property="Background"
-                                                    Value="Red"
-                                                    TargetName="Border" />
-                                        </Trigger>
-                                    </ControlTemplate.Triggers>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                        <Setter Property="Background"
-                                Value="Transparent" />
-                    </Style>
-                </Button.Style>
-            </Button>
-        </UniformGrid>
+        <r:WindowControl x:Name="WindowControl"
+                         Grid.Column="2"
+                         HorizontalAlignment="Right"/>
         <Grid Grid.ColumnSpan="2"
               Grid.Row="1">
             <Grid.ColumnDefinitions>
