--- a/AutoCAD_Windows/AutoCAD_Windows/StyleDictionary.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/StyleDictionary.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:WindowDictionary">
+                    xmlns:local="clr-namespace:WindowDictionary"
+                    xmlns:property="clr-namespace:WindowDictionary.Property"
+                    xmlns:editor="clr-namespace:WindowDictionary.Property.Editor"
+                    xmlns:creator="clr-namespace:WindowDictionary.Property.Creator">
     <Style TargetType="Button">
         <Setter Property="Width"
                 Value="112" />
@@ -393,10 +396,10 @@
                      Value="True">
                 <Setter Property="Background"
                         TargetName="templateRoot"
-                        Value="#7FD1D1D1" />
+                        Value="#eeeeee" /><!--#7FD1D1D1-->
                 <Setter Property="BorderBrush"
                         TargetName="templateRoot"
-                        Value="#FFD1D1D1" />
+                        Value="#eeeeee" /><!--#FFD1D1D1-->
                 <!--<Setter Property="BorderBrush" TargetName="templateRoot" Value="#FF26A0DA"/>-->
             </Trigger>
             <Trigger Property="IsEnabled"
@@ -420,4 +423,44 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
+    <Style x:Key="PropertyItems"
+           TargetType="{x:Type ListViewItem}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                    <Border Name="Border"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Background="{TemplateBinding Background}">
+                        <ContentPresenter Content="{TemplateBinding Content}"
+                                          ContentTemplate="{TemplateBinding ContentTemplate}"
+                                          Margin="{TemplateBinding Padding}" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Focusable"
+                Value="False" />
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver"
+                     Value="True">
+                <Setter Property="Background"
+                        Value="Transparent" />
+                <Setter Property="BorderBrush"
+                        Value="Transparent" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <DataTemplate x:Key="CGroupTemplate">
+        <creator:CGroup PropertyItem="{Binding Mode=OneTime, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContentControl}}, Path=Content}" />
+    </DataTemplate>
+    <DataTemplate x:Key="CGroupCollectionTemplate">
+        <creator:CGroupCollection PropertyItem="{Binding Mode=OneTime, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContentControl}}, Path=Content}"/>
+    </DataTemplate>
+    <DataTemplate x:Key="CPropertyTemplate">
+        <creator:CProperty PropertyItem="{Binding Mode=OneTime, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContentControl}}, Path=Content}" />
+    </DataTemplate>
+    <DataTemplate x:Key="CPropertyCollectionTemplate">
+        <creator:CPropertyCollection PropertyItem="{Binding Mode=OneTime, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContentControl}}, Path=Content}" />
+    </DataTemplate>
 </ResourceDictionary>
