Add property dependencies

--- a/AutoCAD_Windows/AutoCAD_Windows/Property/Creator/CGroup.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/Creator/CGroup.xaml
@@ -37,7 +37,8 @@
             <TextBlock Text="Group Name" />
             <TextBox HorizontalAlignment="Right"
                      Width="250"
-                     Text="{Binding Path=PropertyItem.Parent.Title}"/>
+                     Text="{Binding Path=PropertyItem.Parent.Title}"
+                     KeyUp="TextBox_KeyUp"/>
         </Grid>
     </Grid>
 </ListViewItem>
