--- a/AutoCAD_Windows/AutoCAD_Windows/Property/Creator/CProperty.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/Creator/CProperty.xaml
@@ -10,7 +10,8 @@
               HorizontalContentAlignment="Stretch"
               VerticalContentAlignment="Stretch"
               MinHeight="580"
-              MinWidth="300">
+              MinWidth="300"
+              Loaded="ListViewItem_Loaded">
     <ListViewItem.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -71,7 +72,7 @@
                      MinWidth="112"
                      MaxWidth="224"
                      Text="{Binding PropertyItem.Parent.Title}"
-                     KeyUp="TextBox_KeyUp" />
+                     KeyUp="TextBox_KeyUp"/>
             <TextBlock Grid.Row="1"
                        Text="Property Value Regex"
                        Margin="5"
@@ -84,7 +85,8 @@
             <TextBlock Grid.Row="2"
                        Text="Property Type"
                        IsManipulationEnabled="False" />
-            <ComboBox Grid.Row="2"
+            <ComboBox x:Name="combo"
+                      Grid.Row="2"
                       Grid.Column="1"
                       Height="25"
                       MinWidth="112"
@@ -111,7 +113,7 @@
             <TextBox x:Name="value"
                      x:FieldModifier="private"
                      Grid.Row="2"
-                     PreviewKeyUp="value_PreviewKeyUp"/>
+                     PreviewKeyDown="Value_PreviewKeyDown"/>
             <UniformGrid Grid.Row="3"
                          HorizontalAlignment="Center"
                          Rows="1">
