--- a/AutoCAD_Windows/AutoCAD_Windows/Property/Creator/CPropertyDependency.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/Creator/CPropertyDependency.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:WindowDictionary.Property.Creator"
         mc:Ignorable="d"
         Title=" Add Property Dependency" 
-        Height="450" 
-        Width="600"
+        Height="600" 
+        Width="800"
         WindowStartupLocation="CenterScreen"
         WindowStyle="ToolWindow"
         WindowState="Normal"
@@ -32,15 +32,8 @@
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <ListBox x:Name="MainList"
-                 Margin="5">
-            <!--
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <ListBoxItem Content="{Binding Name}" />
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-            -->
-        </ListBox>
+                 Margin="5"
+                 ItemsSource="{Binding AvailableProperties}" />
         <UniformGrid Columns="1"
                      Grid.Column="1"
                      HorizontalAlignment="Center"
@@ -107,9 +100,30 @@
                 </Button.Style>
             </Button>
         </UniformGrid>
-        <ListBox x:Name="DependencyList"
-                 Grid.Column="2"
-                 Margin="5" />
+        <ListView x:Name="DependencyList"
+                  Grid.Column="2"
+                  ItemsSource="{Binding DependencyItems}"
+                  Margin="5">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <EventSetter Event="MouseDoubleClick"
+                                 Handler="DependencyList_MouseDoubleClick" />
+                </Style>
+            </ListView.ItemContainerStyle>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn DisplayMemberBinding="{Binding Code}"
+                                    Header="Code"
+                                    Width="100" />
+                    <GridViewColumn Header="Path"
+                                    DisplayMemberBinding="{Binding Property}"
+                                    Width="100" />
+                    <GridViewColumn Header="Regex"
+                                    DisplayMemberBinding="{Binding Regex}"
+                                    Width="100" />
+                </GridView>
+            </ListView.View>
+        </ListView>
         <Grid Grid.Row="1"
               Margin="5">
             <Grid.RowDefinitions>
